user-service,study-service minor corrections